<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>poco_vendor</name>
  <version>:{version}</version>
  <description>CMake shim over the poco library.</description>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license> <!-- The contents of this vendor package are Apache 2.0 -->
  <license>Boost Software License 1.0</license> <!-- poco is licensed under the Boost Software License 1.0 (https://pocoproject.org/license.html) -->
  <buildtool_depend>cmake</buildtool_depend>

  <buildtool_export_depend>cmake</buildtool_export_depend>

  <depend>libexpat1-dev</depend>
  <depend>libsqlite3-dev</depend>
  <depend>pcre</depend>
  <depend>zlib</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

